fix padding issue for section on mobile view

--- a/components/layout/layout.module.scss
+++ b/components/layout/layout.module.scss
@@ -12,6 +12,7 @@
 
   h2 {
     text-transform: uppercase;
+    padding-bottom: 20px;
   }
 
   nav {
