--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -63,7 +63,7 @@ section {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 110px 100px;
+  padding: 110px 10px;
 
   p {
     max-width: 800px;
